Improvements to the Canvas API (#137)